[package]
name = "blog-admin"
version = "0.1.1"
description = "A Tauri App"
authors = ["tadghh"]
edition = "2021"

[lib]
name = "blog_admin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.44.2", features = ["full"] }
sqlx =  { version ="0.8.3", features = ["runtime-tokio", "postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-dialog = "2.2.1"
tauri-plugin-fs = "2"
